# xcm-activities

./: Cargo.toml  README.md
chain-config/: Parachain_Config_in_XCM_Activities.md
chain-config/chain_config_excercises/: Cargo.toml
chain-config/chain_config_excercises/src/: lib.rs
core-concepts/: Core_Concepts_of_XCM_Activities.md
execution/: Cargo.toml
execution/src/: lib.rs
in-polkadot/: XCM_in_polkadot_Activities.md
in-polkadot/debug-failed-xcm-message/polkadotjs/scripts/: decode-xcm-generic.ts
in-polkadot/debug-failed-xcm-message/subxt/: Cargo.toml  README.md
in-the-runtime/: Cargo.toml  README.md
in-the-runtime/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
xcm-simulator-pba/: Cargo.toml
xcm-simulator-pba/src/: lib.rs  parachain.rs  relay_chain.rs
