[package]
name = "xcm-simulator-pba"
description = "Common xcm-simulator to use for hacking during PBA"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-message-queue = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

[features]
default = ["std"]
std = ["codec/std", "frame-system/std", "frame-support/std", "pallet-balances/std", "sp-std/std", "sp-core/std", "sp-runtime/std", "sp-io/std", "xcm/std", "xcm-executor/std", "xcm-builder/std", "pallet-xcm/std", "polkadot-core-primitives/std", "polkadot-parachain/std"]
